infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      hostNetwork: true
      containers:
      - name: auth-service
        image: nahidh597/auth-service
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth-service
  type: ClusterIP
  ports:
  - name: auth-service
    protocol: TCP
    port: 8080
    targetPort: 8080
---
