infra/k8s/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  expiration-redis-depl
spec:
  selector:
    matchLabels:
      app: expiration-redis
  replicas: 1
  template:
    metadata:
      labels:
        app:  expiration-redis
    spec:
      containers:
        - name:  expiration-redis
          image:  redis:latest
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
spec:
  type: NodePort
  selector:
    app: expiration-redis
  ports:
  - name: expiration-redis-tcp
    protocol: TCP
    port: 6379
    targetPort: 6379
---
