infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      hostNetwork: true
      containers:
      - name: orders-service
        image: nahidh597/orders-service
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders-service
  type: ClusterIP
  ports:
  - name: orders-service
    protocol: TCP
    port: 8082
    targetPort: 8082
---
