infra/k8s/ticket-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-service
  template:
    metadata:
      labels:
        app: ticket-service
    spec:
      hostNetwork: true
      containers:
      - name: ticket-service
        image: nahidh597/ticket-service
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-srv
spec:
  selector:
    app: ticket-service
  type: ClusterIP
  ports:
  - name: ticket-service
    protocol: TCP
    port: 8081
    targetPort: 8081
---
