infra/k8s/ticket-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ticket-mongo-depl
spec:
  selector:
    matchLabels:
      app: ticket-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app:  ticket-mongo
    spec:
      containers:
        - name:  ticket-mongo
          image:  mongo:latest
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-mongo-srv
spec:
  selector:
    app: ticket-mongo
  type: NodePort
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
---
