infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: ticketing.dev
    http: 
      paths: 
      - backend:
          service:
            name: auth-srv
            port:
              number: 8080
        path: /api/users/?(.*)
        pathType: Prefix
      - backend:
          service:
            name: ticket-srv
            port:
              number: 8081
        path: /api/tickets/?(.*)
        pathType: Prefix
      - backend:
          service:
            name: orders-srv
            port:
              number: 8082
        path: /api/orders/?(.*)
        pathType: Prefix
      - backend:
          service:
            name: client-srv
            port:
              number: 3000
        path: /?(.*)
        pathType: Prefix
